--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Cadastros ConfiaX</title>
-  </head>
-  <body>
-    <h1> Teste Cadastros ConfiaX </h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ConfiaX Cadastros</title>
+</head>
+<body>
+  <table id="tabela"></table>
+  
+  <script src="main.js"></script>  
+</body>
 </html>
