--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="main.js"></script>
 
     <title>ConfiaX Cadastros</title>
 
@@ -20,7 +21,7 @@
     
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="post" action="main.js" id = "mainForm" name="cnpjForm" oninput="searchCnpj();">
+      <form method="post" action="" id = "mainForm" name="cnpjForm" oninput="searchCnpj();">
 
         <label for="cCNPJ">
 
@@ -42,17 +43,6 @@
       </form>
 
     </div>
-  
-
-
-
-
-
-
-
-
-
-    <script src="main.js"></script>
 
   </body>
 
