--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="post" action="" id = "mainForm" name="cnpjForm" oninput="searchCnpj();">
+      <form method="post" action="" id = "mainForm" name="cnpjForm">
 
         <label for="cCNPJ">
 
@@ -39,7 +39,7 @@
 
         </label>
 
-        <input type="submit" value="Pesquisar CNPJ">
+        <input type="submit" value="Pesquisar CNPJ" onclick="searchCnpj();">
       </form>
 
     </div>
