--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="post" action="" id = "mainForm" name="cnpjForm">
+      <form method="post" id = "mainForm" name="cnpjForm">
 
         <label for="cCNPJ">
 
