--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="post" id = "mainForm" name="cnpjForm">
+      <form method="post" action="index.html" id = "mainForm" name="cnpjForm" onsubmit="searchCnpj();">
 
         <label for="cCNPJ">
 
@@ -39,7 +39,7 @@
 
         </label>
 
-        <input type="submit" value="Pesquisar CNPJ" onclick="searchCnpj();">
+        <input type="submit" value="Pesquisar CNPJ">
       </form>
 
     </div>
