--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js"></script>
 
     <title>ConfiaX Cadastros</title>
 
@@ -21,7 +20,7 @@
     
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="post" action="index.html" id = "mainForm" name="cnpjForm" onsubmit="searchCnpj();">
+      <form method="post" action="main.js" id="mainForm" name="cnpjForm" onsubmit="searchCnpj();">
 
         <label for="cCNPJ">
 
