--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="doctoInputForm" class="mainDiv">
 
-      <form id="mainForm" name="cnpjForm">
+      <form method="post" id="mainForm" name="cnpjForm">
 
         <fieldset id="cnpj">
         
