--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="post" id="mainForm" name="cnpjForm">
+      <form method="get" id="mainForm" name="cnpjForm">
 
         <fieldset id="cnpj">
         
@@ -67,7 +67,9 @@
           <br />
           
           <p>
-            CRECI:
+            CRECI: <br />
+            <input type="radio" name="tCreci" id="cCreciS" required="required"/> Sim 
+            <input type="radio" name="tCreci" id="cCreciN" required="required"/> Não 
           </p>
 
           <br />
