--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="get" id="mainForm" name="cnpjForm">
+      <form method="get" id="mainForm" name="cnpjForm" oninput="searchCnpj()">
 
         <fieldset id="cnpj">
         
@@ -39,7 +39,7 @@
 
           <br />
 
-          <input type="submit" value="Pesquisar CNPJ" onclick="searchCnpj();">
+          <input type="submit" value="Pesquisar CNPJ">
 
         </fieldset>
 
