--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="doctoInputForm" class="mainDiv">
 
-      <form method="get" id="mainForm" name="cnpjForm" oninput="searchCnpj()">
+      <form id="mainForm" name="cnpjForm" oninput="searchCnpj()">
 
         <fieldset id="cnpj">
         
