--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-
+    <script src="main.js"></script>
     <div id="doctoInputForm" class="mainDiv">
 
       <form id="mainForm" name="cnpjForm" oninput="searchCnpj()">
